--- a/game.html
+++ b/game.html
@@ -1,3 +1,9 @@
+<html>
+  <head>
+    <title>InfiniteBall</title>
+    <link rel="stylesheet" href="style2.css">
+  </head>
+  <body>
 <div class="fall">
 
   <div class="walls">
@@ -17,3 +23,5 @@
     <div class="ball"></div>
   </div>
 </div>
+  </body>
+</html>
