--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>InfiniteBall</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style2.scss">
   </head>
   <body>
 <div class="fall">
